recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:4: error: not found: value NIL
		return l.head :: NIL
                                 ^