recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
	if (l.tail.tail.length == 0 )
	{
		return l.head :: NIL
	}

	else l.head :: butLast(l.tail)
}
